--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCtype html>
 <html lang="en">
 
 <head>
@@ -28,25 +28,25 @@
                             </tr>
                             <tr>
                                 <td>Position for which you are applying (as advertised)</td>
-                                <td><input type="text" placeholder="Answer Here"></td>
+                                <td><input type="text" name="" id="inputElements" placeholder="Answer Here"></td>
                             </tr>
                             <tr>
                                 <td>Department where the position was advertised
                                 </td>
-                                <td><input type="text" placeholder="Answer Here"></td>
+                                <td><input type="text" name="" id="inputElements" placeholder="Answer Here"></td>
                             </tr>
                             <tr>
                                 <td>Reference number (as stated in the advert)
                                 </td>
-                                <td><input type="text" placeholder="Answer Here"></td>
+                                <td><input type="text" name="" id="inputElements" placeholder="Answer Here"></td>
                             </tr>
                             <tr>
                                 <td>If you are offered the position, when can you start OR how much notice must you serve with your current employer?</td>
-                                <td><input type="text" placeholder="Answer Here"></td>
+                                <td><input type="text" name="" id="inputElements" placeholder="Answer Here"></td>
                             </tr>
                             <tr>
                                 <td>Can you please help</td>
-                                <td><input type="text" placeholder="Answer Here"></td>
+                                <td><input type="text" name="" id="inputElements" placeholder="Answer Here"></td>
                             </tr>
                         </table>
                 </div>
@@ -63,52 +63,52 @@
                             </tr>
                             <tr>
                                 <td>Surname</td>
-                                <td><input type="text" placeholder="Answer Here"></td>
+                                <td><input type="text" name="" id="inputElements" placeholder="Answer Here"></td>
                             </tr>
                             <tr>
                                 <td>First Names
                                 </td>
-                                <td><input type="text" placeholder="Answer Here"></td>
+                                <td><input type="text" name="" id="inputElements" placeholder="Answer Here"></td>
                             </tr>
                             <tr>
                                 <td>Date Of Birth
                                 </td>
-                                <td><input type="text" placeholder="Answer Here"></td>
+                                <td><input type="text" name="" id="inputElements" placeholder="Answer Here"></td>
                             </tr>
                             <tr>
                                 <td>ID Number</td>
-                                <td><input type="text" placeholder="Answer Here"></td>
+                                <td><input type="text" name="" id="inputElements" placeholder="Answer Here"></td>
                             </tr>
                             <tr>
                                 <td>Nationality</td>
-                                <td><input type="text" placeholder="Answer Here"></td>
+                                <td><input type="text" name="" id="inputElements" placeholder="Answer Here"></td>
                             </tr>
                             <tr>
                                 <td>If your profession or occupation requires State or official registration, provide date and particulars of registration.</td>
-                                <td><input type="text" placeholder="Answer Here"></td>
+                                <td><input type="text" name="" id="inputElements" placeholder="Answer Here"></td>
                             </tr>
                         </table>
                 </div>
                 <h3>Race</h3>
-                <input type="radio" name="race" class="radioItem"> African
-                <input type="radio" name="race" class="radioItem"> White
-                <input type="radio" name="race" class="radioItem"> Colored
-                <input type="radio" name="race" class="radioItem"> Asian
+                <input type="radio" name="race" value="African"> African
+                <input type="radio" name="race" value="White"> White
+                <input type="radio" name="race" value="Colored"> Colored
+                <input type="radio" name="race" value="Asian"> Asian
                 <h3>Gender</h3>
-                <input type="radio" name="race" class="radioItem"> Male
-                <input type="radio" name="race" class="radioItem"> Female
+                <input type="radio" name="race" value="Male"> Male
+                <input type="radio" name="race" value="Female"> Female
                 <h3>Do you have a disability?</h3>
-                <input type="radio" name="race" class="radioItem"> YES
-                <input type="radio" name="race" class="radioItem"> NO
+                <input type="radio" name="race" value="YES"> YES
+                <input type="radio" name="race" value="NO"> NO
                 <h3>Are you a South African Citizen?</h3>
-                <input type="radio" name="race" class="radioItem"> YES
-                <input type="radio" name="race" class="radioItem"> NO
+                <input type="radio" name="race" value="YES"> YES
+                <input type="radio" name="race" value="NO"> NO
                 <h3>And do you have a valid work Permit?</h3>
-                <input type="radio" name="race" class="radioItem"> YES
-                <input type="radio" name="race" class="radioItem"> NO
+                <input type="radio" name="race" value="YES"> YES
+                <input type="radio" name="race" value="NO"> NO
                 <h3>Have you ever been convicted of a criminal offence or been dismissed form employment?</h3>
-                <input type="radio" name="race" class="radioItem"> YES
-                <input type="radio" name="race" class="radioItem"> NO
+                <input type="radio" name="race" value="YES"> YES
+                <input type="radio" name="race" value="NO"> NO
             </div>
         </div>
         <div class="row">
@@ -122,21 +122,21 @@
                             </tr>
                             <tr>
                                 <td>Preferred language for correspondence?</td>
-                                <td><input type="text" placeholder="Answer Here"></td>
+                                <td><input type="text" name="" id="inputElements" placeholder="Answer Here"></td>
                             </tr>
                             <tr>
                                 <td>Telephone number during office hours</td>
-                                <td><input type="text" placeholder="Answer Here"></td>
+                                <td><input type="text" name="" id="inputElements" placeholder="Answer Here"></td>
                             </tr>
                             <tr>
                                 <td>Correspondence contact details (in terms of above)</td>
-                                <td><input type="text" placeholder="Answer Here"></td>
+                                <td><input type="text" name="" id="inputElements" placeholder="Answer Here"></td>
                             </tr>
                         </table>
                         <h3>Preferred method for correspondence</h3>
-                        <input type="radio" name="race" class="radioItem"> Post
-                        <input type="radio" name="race" class="radioItem"> E-mail
-                        <input type="radio" name="race" class="radioItem"> Fax
+                        <input type="radio" name="race" value="Post"> Post
+                        <input type="radio" name="race" value="mail"> E-mail
+                        <input type="radio" name="race" value="Fax"> Fax
                 </div>
             </div>
         </div>
@@ -155,22 +155,22 @@
                     <th>Write</th>
                     </tr>
                     <tr>
-                        <td><input type="text" placeholder="input your 1st language"></td>
-                        <th><input type="text" placeholder="Answer Here"></th>
-                        <th><input type="text" placeholder="Answer Here"></th>
-                        <th><input type="text" placeholder="Answer Here"></th>
+                        <td><input type="text" name="" id="inputElements" placeholder="input your 1st language"></td>
+                        <th><input type="text" name="" id="inputElements" placeholder="Answer Here"></th>
+                        <th><input type="text" name="" id="inputElements" placeholder="Answer Here"></th>
+                        <th><input type="text" name="" id="inputElements" placeholder="Answer Here"></th>
                     </tr>
                     <tr>
-                        <td><input type="text" placeholder="input your 2nd language"></td>
-                        <th><input type="text" placeholder="Answer Here"></th>
-                        <th><input type="text" placeholder="Answer Here"></th>
-                        <th><input type="text" placeholder="Answer Here"></th>
+                        <td><input type="text" name="" id="inputElements" placeholder="input your 2nd language"></td>
+                        <th><input type="text" name="" id="inputElements" placeholder="Answer Here"></th>
+                        <th><input type="text" name="" id="inputElements" placeholder="Answer Here"></th>
+                        <th><input type="text" name="" id="inputElements" placeholder="Answer Here"></th>
                     </tr>
                     <tr>
-                        <td><input type="text" placeholder="input your 3rd language"></td>
-                        <th><input type="text" placeholder="Answer Here"></th>
-                        <th><input type="text" placeholder="Answer Here"></th>
-                        <th><input type="text" placeholder="Answer Here"></th>
+                        <td><input type="text" name="" id="inputElements" placeholder="input your 3rd language"></td>
+                        <th><input type="text" name="" id="inputElements" placeholder="Answer Here"></th>
+                        <th><input type="text" name="" id="inputElements" placeholder="Answer Here"></th>
+                        <th><input type="text" name="" id="inputElements" placeholder="Answer Here"></th>
                     </tr>
                     </table>
                 </div>
@@ -187,7 +187,7 @@
                                 <th>Year Obtained</th>
                             </tr>
                             <tr>
-                                <td><input type=" text " placeholder="Answer Here "></td>
+                                <td><input type="text " placeholder="Answer Here "></td>
                                 <th><input type="text " placeholder="Answer Here "></th>
                                 <th><input type="text " placeholder="Answer Here "></th>
                             </tr>
@@ -205,7 +205,9 @@
                 </div>
             </div>
         </div>
-        <input type="button" placeholder>
+        <input type="button" id="submitButton">
 </body>
+<script src="js/z83.js"></script>
+<script src="./dom/z83.dom.js"></script>
 
 </html>
